ローカルサーバー上でのユーザー登録ができるようになった

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,31 @@
-<!doctype html><html lang=""><head><link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/static/favicon.ico"><title>chat</title><script defer="defer" src="/static/js/chunk-vendors.7e910c53.js"></script><script defer="defer" src="/static/js/app.6b32d293.js"></script><link href="/static/css/chunk-vendors.c61adc46.css" rel="stylesheet"><link href="/static/css/app.78ce17eb.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but chat doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+Pro:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="/static/favicon.ico" />
+    <title>chat</title>
+    <script defer="defer" src="/static/js/chunk-vendors.7e910c53.js"></script>
+    <script defer="defer" src="/static/js/app.b0133771.js"></script>
+    <link href="/static/css/chunk-vendors.c61adc46.css" rel="stylesheet" />
+    <link href="/static/css/app.78ce17eb.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but chat doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+  </body>
+</html>
