--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="/static/favicon.ico" />
     <title>chat</title>
-    <script defer="defer" src="/static/js/chunk-vendors.7e910c53.js"></script>
-    <script defer="defer" src="/static/js/app.987090eb.js"></script>
-    <link href="/static/css/chunk-vendors.c61adc46.css" rel="stylesheet" />
-    <link href="/static/css/app.78ce17eb.css" rel="stylesheet" />
+    <script defer="defer" src="/static/js/chunk-vendors.js"></script>
+    <script defer="defer" src="/static/js/app.js"></script>
+    <link href="/static/css/chunk-vendors.css" rel="stylesheet" />
+    <link href="/static/css/app.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
